fix button position on small screen

--- a/src/css/large.css
+++ b/src/css/large.css
@@ -2,15 +2,6 @@
   article:nth-child(3) {
     grid-column: span 1;
   }
-  .button-section{
-    display: flex;
-    flex-direction: column;
-    font-size: 1.5rem;
-    background-color: var(--secondary-color);
-    border-radius: 10px;
-    align-items: center;
-    justify-content: center;
-  }
   .hero {
     grid-column: 2/4;
     grid-row: 1/3;
