--- a/src/css/small.css
+++ b/src/css/small.css
@@ -22,6 +22,15 @@ body {
 .box-shadow {
   box-shadow: 0 0 30px rgba(0, 0, 0, 0.9);
 }
+.button-section{
+  display: flex;
+  flex-direction: column;
+  font-size: 1.5rem;
+  background-color: var(--secondary-color);
+  border-radius: 10px;
+  align-items: center;
+  justify-content: center;
+}
 .centered-block {
   display: flex;
   flex-direction: column;
